NA-475 handle cell and header alignment issue

--- a/src/ui/annotation_schema_tab.css
+++ b/src/ui/annotation_schema_tab.css
@@ -91,7 +91,8 @@
   max-width: 1.25rem;
 }
 
-.neuroglancer-annotation-schema-description-cell {
+.neuroglancer-annotation-schema-description-cell,
+.neuroglancer-annotation-schema-description-header {
   max-width: 1.25rem;
   visibility: hidden;
   opacity: 0;
